# traumatrial

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: freshness.yml  publish-npm.yml  publish-pypi.yml
demo/: README.md  package-lock.json  package.json
demo/app/: globals.css  layout.tsx  page.tsx
demo/app/api/from-nemsis/: route.ts
demo/app/api/match/: route.ts
demo/app/api/parse-trial/: route.ts
demo/app/api/portfolio/: route.ts
demo/app/playground/: page.tsx
demo/lib/: engine.ts  log.ts  nemsis.ts  parseCache.ts  parseTrial.ts  types.ts  validatePatient.ts  validateTrial.ts
demo/public/: patients.json  robots.txt  trials.json
demo/public/matches/: P-001.json  P-002.json  P-003.json  P-004.json  P-005.json  P-006.json  P-007.json  P-008.json  P-009.json  P-010.json  P-011.json  P-012.json  P-013.json
demo/public/nemsis-samples/: persona-006-pregnant-fall.xml  realistic-isolated-burn.xml  realistic-peds-severe-tbi.xml  realistic-sci-diving.xml
engine/: README.md  pyproject.toml
engine-ts/: README.md  package-lock.json  package.json  tsconfig.json
engine-ts/src/: index.ts  nemsis.ts  types.ts
engine-ts/test/: engine.test.mjs  nemsis-coverage.test.mjs  nemsis.test.mjs
engine/patients/: P-001.json  P-002.json  P-003.json  P-004.json  P-005.json  P-006.json  P-007.json  P-008.json  P-009.json  P-010.json  P-011.json  P-012.json  P-013.json
engine/scripts/: backfill_provenance.py  check_freshness.py  demo_round_trip.py  discover_trials.py  parse_trial.py  precompute.py
engine/tests/: test_match.py  test_nemsis.py  test_nemsis_coverage.py  test_operators.py
engine/tests/fixtures/nemsis/: adversarial-substring-trap.xml  incomplete.xml  persona-001-hemorrhage.xml  persona-002-geriatric-fall.xml  persona-003-gsw.xml  persona-004-tbi-mvc.xml  persona-005-anticoag-mvc.xml  persona-007-cardiac-arrest.xml  persona-008-pediatric-mvc.xml  realistic-mva-polytrauma.xml
engine/traumatrial_match/: __init__.py  loader.py  match.py  nemsis.py  nemsis_vocab.py  schema.py
engine/trials/: NCT02292589.json  NCT02407028.json  NCT03559114.json  NCT03582293.json  NCT03754114.json  NCT03992404.json  NCT04117672.json  NCT04217551.json  NCT04499755.json  NCT04521881.json  NCT04588311.json  NCT04995068.json  NCT05008926.json  NCT05095857.json  NCT05097261.json  NCT05166343.json  NCT05323149.json  NCT05337618.json  NCT05437575.json  NCT05446584.json  NCT05449834.json  NCT05482945.json  NCT05616910.json  NCT05634109.json  NCT05638581.json  NCT05702138.json  NCT05782244.json  NCT05826912.json  NCT05889650.json  NCT05931601.json  NCT05958342.json  NCT06062628.json  NCT06062888.json  NCT06065046.json  NCT06070350.json  NCT06073886.json  NCT06253923.json  NCT06254469.json  NCT06282965.json  NCT06292585.json  (+24 more)
