[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traumatrial-match"
version = "0.0.1"
description = "Real-time trauma trial eligibility matching engine."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "traumatrial contributors" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/jajjer/traumatrial-match"
Issues = "https://github.com/jajjer/traumatrial-match/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["traumatrial_match*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
